Fix overflow on header

--- a/css/queries.css
+++ b/css/queries.css
@@ -15,7 +15,7 @@
 /*Small phones/tablets - 481px-767px
 *****************************/
 
-@media only screen and (max-width: 767px){
+/*@media only screen and (max-width: 767px){
     
     #about{
     
@@ -32,7 +32,8 @@
 }
 
 .about-text{
-    margin: 55px 0;
+    width: 100%;
+    font-size: 75%;
 }
     
     .skill-logos{
@@ -46,7 +47,7 @@
 
 /*Small phones - less than or equal to 480px
 *****************************/
-
+/*
 @media only screen and (max-width: 480px){
     .skill-logos{
     height: 25px;
