--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+/** COLORS
+ attention color:  #007edc
+
+****/
+
 *{
     margin: 0;
     padding: 0;
@@ -6,11 +11,22 @@
 
 
 
-body{
+html,body{
     font-family: 'Raleway',serif;
     font-weight: 300;
     font-size: 20px;
     text-rendering: optimizeLegibility;
+    overflow-x: hidden; 
+}
+
+.clearfix{ zoom: 1 }
+.clearfix:after {
+	content: ".";
+	clear: both;
+	display: block;
+	height: 0;
+	visibility: hidden;
+    overflow: hidden;
 }
 
 header{
@@ -81,7 +97,6 @@ h2{
 #about{
     
     background-color: #F4F4F4;
-    
     width: auto;
     text-align: center;
     height: 100%;
@@ -94,7 +109,8 @@ h2{
 }
 
 .about-text{
-    margin: 55px 0;
+    margin: 25px auto;
+    width: 66%;
 }
 .skill-logos{
     height: 150px;
